2002-08-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add NetBSD header/ldflag support (Patch from
	Peter Cooper). Cleanup freebsd support.

Fri Aug  9 12:12:18 2002  Georg Fleischmann <georg@vhf.de>

	* Source/NSWindow.m ([-setFrameFromString:]),
	([-stringWithSavedFrame]): Don't flip coordinates to make it
	compatible with OpenStep.

2002-08-05  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSSplitView.m 
	[NSplitView -setFrame:]:
	  adjust the subviews.
	[NSSplitView -resizeWithOldSuperviewSize:]:
	  send the splitview's old size not the superview's old size to 
	  [NSSplitView -_adjustSubviews:]
	[NSSplitView -displayIfNeededInRectIgnoringOpacity:]
	[NSSplitView -displayRectIgnoringOpacity:]
	  set _never_displayed_before before calling _adjustSubviews.
	  It could lead to a loop, if the delegate was calling -display.
	
2002-08-03  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSView.m ([NSView -replaceSubview:withSubview]):
	The replacing subview was not inserted at the old subview's location.

2002-08-02  Adam Fedor  <fedor@gnu.org>

	* Merge changes from 0.8.0 into main branch.

2002-08-02  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTabView.m ([NSTabView -initWithCoder:]):
	Set _selected ivar based on _selected_item value.

2002-08-01  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for recent version of audiofile

2002-07-31  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/AppKit.h: Add NSSound.
	* Source/GNUmakefile (AUTOGSDOC_HEADERS): Idem.
	
	* Tools/gsnd/GNUmakefile (GNUSTEP_INSTALLATION_DIR): Add.

2002-07-30  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for autofile header/libs.
	* Source/NSBundleAdditions.m (pathForSoundResource:): New.
	* Source/NSSound.m: New file
	* Headers/gnustep/gui/NSSound.h: Idem.
	* Tools/gsnd: New server tool. (Implementation from
	Enrico Sersale).

2002-07-18  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* NSBundleAdditions.m: (-[awakeWithContext:])  Corrected